Made a system that adds the custom roles to a list, which gains access to the commands. Added the clearing system allowing for respawn for custom roles later in the round. Added a test command to spawn a primitive cube object

--- a/SCPR6SPlugin.csproj
+++ b/SCPR6SPlugin.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientCommandFuze.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="PlayerHandler.cs" />
     <Compile Include="SCPR6SPlugin.cs" />
