Added the check for the player needing to stay and look at the door he is using fuze charge on for 5 seconds. Added the charge counter for Fuze Added the command to check the remaining charges Added the command to convert grenades into charges

--- a/SCPR6SPlugin.csproj
+++ b/SCPR6SPlugin.csproj
@@ -89,11 +89,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientCommandFuze.cs" />
+    <Compile Include="ClientCommands\ClientCommandCheckCharges.cs" />
+    <Compile Include="ClientCommands\ClientCommandCraftCharge.cs" />
+    <Compile Include="ClientCommands\ClientCommandFuze.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="PlayerHandler.cs" />
     <Compile Include="SCPR6SPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
